--- a/package.json
+++ b/package.json
@@ -17,14 +17,31 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config test/jest-e2e.json"
+    "test:e2e": "jest --config test/jest-e2e.json",
+
+    "up:dev": "docker compose up -d --build",
+    "down": "docker compose down",
+
+    "migration:generate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli  migration:generate ./src/db/migrations/$npm_config_name -d src/db/data-source.ts",
+    "postmigration:generate": "npm run build",
+
+    "migration:run": "node ./node_modules/typeorm/cli migration:run -d dist/db/data-source.js",
+    "schema:log": "node ./node_modules/typeorm/cli schema:log -d dist/db/data-source.js",
+    "schema:check": "ts-node src/db/scripts/shemaCheck.ts",
+
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "dotenv": "^17.2.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -42,6 +59,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
