--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,5 +9,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Print message
-        run: echo "Hello world!"
+
+      - name: Build and push
+        uses: ./.github/actions/build-push
