--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -16,3 +16,18 @@ runs:
     - name: Build
       run: npm run build
       shell: bash
+
+    - name: Docker Build
+      shell: bash
+      run: docker build -t "$IMAGE" .
+
+    - name: Login to GHCR
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ github.token }}
+
+    - name: Push
+      shell: bash
+      run: docker push "$IMAGE"
